Some layout bugs fixed

--- a/src/components/field/Field.scss
+++ b/src/components/field/Field.scss
@@ -7,8 +7,9 @@
   margin: 0 auto;
 
   &__input {
-    flex-basis: 80%;
-    min-width: 80%;
+    //flex-basis: 80%;
+    //min-width: 80%;
+    width: 340px;
     border: none;
     height: 100%;
     border-top-left-radius: 10px;
@@ -21,8 +22,9 @@
   }
 
   &__button {
-    flex-basis: 20%;
-    min-width: 20%;
+    //flex-basis: 20%;
+    // min-width: 20%;
+    width: 60px;
     height: 100%;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
