--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -21,6 +21,12 @@
   cursor: pointer;
 }
 
+.controls__menu {
+  margin-left: 10px;
+  font-size: 18px;
+  font-weight: bold;
+}
+
 .global-nav__controls {
   display: none;
 }
@@ -73,5 +79,6 @@
   .controls__logo {
     width: 35px;
     height: 35px;
+    margin-right: 10px;
   }
 }
